src/objects/inscor__Lease_Line__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Aircraft_Register__c</fullName>
        <label>Aircraft Register</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__CSN_at_Installation__c</fullName>
        <label>CSN at Installation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__CSN_at_Removal__c</fullName>
        <label>CSN at Removal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Cycle_Limit_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cycle Limit Item</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Lease Lines (Cycle Limit Item)</relationshipLabel>
        <relationshipName>Lease_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Cycle_Limit__c</fullName>
        <label>Cycle Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Cycle_Overage_Price__c</fullName>
        <label>Cycle Overage Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Cycles_LPW__c</fullName>
        <inlineHelpText>This % of the Cycle overage price will be used to reduce the cost fo the inventory line acquisition cost. This field overrides the &quot;Lease Part Writedown %</inlineHelpText>
        <label>Cycles LPW %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inscor__Date_of_Engine_Installation__c</fullName>
        <label>Date of Engine Installation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Date_of_Removal__c</fullName>
        <label>Date of Removal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__ECSN_at_Installation__c</fullName>
        <label>ECSN at Installation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__ECSN_at_Removal__c</fullName>
        <label>ECSN at Removal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__ETSN_at_Installation__c</fullName>
        <label>ETSN at Installation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__ETSN_at_Removal__c</fullName>
        <label>ETSN at Removal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Engine_Position__c</fullName>
        <label>Engine Position</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Flat_Rate_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Flat Rate Item</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Lease Lines (Flat Rate Item)</relationshipLabel>
        <relationshipName>Lease_Lines2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Flat_Rate__c</fullName>
        <label>Flat Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.inscor__Part_Number__c</field>
                <operation>equals</operation>
                <valueField>inscor__Inventory_Line__c.inscor__Product__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>inscor__Inventory_Line__c</referenceTo>
        <relationshipLabel>Lease Lines</relationshipLabel>
        <relationshipName>Lease_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Lease_COGS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease COGS Account</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Lease Lines (Lease COGS Account)</relationshipLabel>
        <relationshipName>Lease_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Lease_Part_Writedown__c</fullName>
        <inlineHelpText>This % of the invoice will be used to reduce the cost of the inventory line acquisition cost.</inlineHelpText>
        <label>Lease Part Writedown %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inscor__Lease_Quantity__c</fullName>
        <label>Lease Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Lease_Revenue_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease Revenue Account</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Lease Lines</relationshipLabel>
        <relationshipName>Lease_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Lease__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease</label>
        <referenceTo>inscor__Lease__c</referenceTo>
        <relationshipLabel>Lease Lines</relationshipLabel>
        <relationshipName>Lease_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Min_Cycles__c</fullName>
        <label>Min Cycles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Min_Times__c</fullName>
        <label>Min Times</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Outright_Price__c</fullName>
        <inlineHelpText>This field is informational only</inlineHelpText>
        <label>Outright Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Part_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Number</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Lease Lines</relationshipLabel>
        <relationshipName>Lease_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Pricing_Type__c</fullName>
        <label>Pricing Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Rate</fullName>
                </value>
                <value>
                    <fullName>Fixed Rate + Overages</fullName>
                </value>
                <value>
                    <fullName>Usage Based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Removal_Reason__c</fullName>
        <label>Removal Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__TSN_at_Installation__c</fullName>
        <label>TSN at Installation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__TSN_at_Removal__c</fullName>
        <label>TSN at Removal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Time_Limit_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Limit Item</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Lease Lines (Time Limit Item)</relationshipLabel>
        <relationshipName>Lease_Lines3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Time_Limit__c</fullName>
        <label>Time Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Time_Overage_Price__c</fullName>
        <label>Time Overage Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Times_LPW__c</fullName>
        <inlineHelpText>This % of the Time overage price will be used to reduce the cost fo the inventory line acquisition cost. This field overrides the &quot;Lease Part Writedown %</inlineHelpText>
        <label>Times LPW %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Lease Line</label>
    <nameField>
        <displayFormat>LL-{0}</displayFormat>
        <label>Lease Lines Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>inscor__Qty_cannot_more_then_Inv_qty_available</fullName>
        <active>true</active>
        <errorConditionFormula>(ISNEW() || ISCHANGED(inscor__Lease_Quantity__c)) &amp;&amp; inscor__Lease_Quantity__c &gt; inscor__Inventory__r.inscor__Quantity_Available__c</errorConditionFormula>
        <errorMessage>Lease Quantity can not greater than Quantity Available of Inventory</errorMessage>
    </validationRules>
</CustomObject>